--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+  padding: 3rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  background-color: #fff;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.blockquote {
+  border-left: 5px solid #ccc;
+  padding-left: 1rem;
+  margin-bottom: 2rem;
+}
+
+.alert {
+  padding: 1.5rem;
+  background-color: #fff9db;
+  border-left: 5px solid #f0c36d;
+}
+
+a {
+  font-size: 1rem;
+  text-decoration: underline;
+}
+
